apps/internal-router/overlays/test-skip-validation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-skip-validation-internal-router-ingress
  namespace: test-skip-validation
spec:
  ingressClassName: nginx
  rules:
  - host: kim-dev.pipeline-team.cf-cd.com
    http:
      paths:
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /webhooks
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /workflows
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /app-proxy
        pathType: Prefix
